--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,28 @@
 @import 'base/_grid';
 
 
+@mixin slide($name, $bgcolor, $textcolor, $linkcolor) {
+  #{$name} {
+    background-color: $bgcolor;
+    color: $textcolor;
+  }
+  #{$name} h1 {
+    font-size: 3.8em;
+    letter-spacing: -3px;
+    line-height: 0px;
+    font-weight: 700;
+  }
+  #{$name} a:link {
+    color: $linkcolor;
+  }
+  #{$name} a:visited {
+    color: desaturate($linkcolor, 50);
+  }
+  #{$name} a:hover {
+    color: saturate($linkcolor, 50);
+  }
+}
+
 /* Global */
 
 body {
@@ -106,13 +128,6 @@ ul {
   line-height: 0px;
   padding-bottom:20px;
   font-weight: 400;
-}
-#intro h2 {
-  font-size: 2em;
-  color: #8a8683;
-  line-height: 0px;
-  padding-bottom:20px;
-  font-weight: 400;
   #bradly-name {
     //Only do this for webkit enabled devices.
     @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -161,138 +176,53 @@ ul {
 /* Check-In App Slide */
 
 $checkinbg: #8FC93A;
-$checkinh1: #E4CC37;
-$checkinp: #000;
-$checkina: #1B3734;
+$checkintext: #000;
+$checkinlink: #1B3734;
 
-#checkinapp{
-  background-color: $checkinbg;
-  color: $checkinp;
-}
-#checkinapp h1 {
-  font-size: 3.8em;
-  letter-spacing: -3px;
-  line-height: 0px;
-  color: $checkinh1;
-  font-weight: 700;
-}
-#checkinapp a:link {
-  color: $checkina;
-}
-#checkinapp a:visited {
-  color: desaturate($checkina, 50);
-}
-#checkinapp a:hover {
-  color: saturate($checkina, 50);
-}
-
-
+@include slide(#checkinapp, $checkinbg, $checkintext, $checkinlink);
 
 /* Game Time slide */
 
 $gametimebg: #BCD2EE;
-$gametimeh1: #9BC1BC;
-$gametimep: #52050A;
-$gametimea: #9B7EDE;
+$gametimetext: #52050A;
+$gametimelink: #9B7EDE;
+
+@include slide(#gametime, $gametimebg, $gametimetext, $gametimelink);
 
 #gametime{
   background: $gametimebg url('../images/gametime.svg');
   background-repeat: no-repeat;
   background-size: cover;
-  color: $gametimep;
-  font-weight: 400;
-}
-#gametime h1 {
-  font-size: 3.8em;
-  letter-spacing: -3px;
-  line-height: 0px;
-  font-weight: 700;
-  color: $gametimeh1;
-}
-#gametime a:link {
-  color: $gametimea;
-}
-#gametime a:visited {
-  color: desaturate($gametimea, 25);
-}
-#gametime a:hover {
-  color: saturate($gametimea, 50);
 }
 
 /* YouTube Downloader slide */
 
-#ytd {
-  background-color:#b31217;
-  color:#FFFFFF;
-}
-#ytd h1 {
-  font-size: 3.8em;
-  letter-spacing: -3px;
-  line-height: 0px;
-  color:#FFFFFF;
-  font-weight: 700;
-}
-#ytd a:link,
-#ytd a:visited {
-  color: #000000;
-}
-#ytd a:hover {
-  color: #707070;
-}
+$ytdbg: #B31217;
+$ytdtext: #FFF;
+$ytdlink: #111;
+
+@include slide(#ytd, $ytdbg, $ytdtext, $ytdlink);
 
 /* Existential-Jackalope slide */
 
+$jackalopebg: #008834;
+$jackalopetext: #FFF;
+$jackalopelink: rgb(123, 212, 131);
+
+@include slide(#jackalope, $jackalopebg, $jackalopetext, $jackalopelink);
+
 #jackalope{
-  background: #008834 url('../images/existential-jackalope-bg.jpg') repeat-y;
+  background: $jackalopebg url('../images/existential-jackalope-bg.jpg') repeat-y;
   background-size:100%;
-  color:#ffffff;
-}
-#jackalope h1 {
-  font-size: 3.8em;
-  letter-spacing: -3px;
-  line-height: 0;
-  color:#ffffff;
-  font-weight: 700;
-}
-#jackalope a:link,
-#jackalope a:visited {
-  color: rgb(123, 212, 131);
-}
-#jackalope a:hover {
-  color: #b7b700;
 }
 
 /* Job search slide */
 
 $jobbg: #5E565A;
-$jobh1: #FF934F;
-$jobp: #A9CBB7;
-$joba: #EFECCA;
+$jobtext: #A9CBB7;
+$joblink: #EFECCA;
 
-#jobsearch{
-  //background: #008834 url('../images/jobsearch-bg.png') repeat-y;
-  background-size:100%;
-  background-color: $jobbg;
-  color: $jobp;
-  //text-shadow: 2px 2px 10px #fff;
-}
-#jobsearch h1 {
-  font-size: 3.8em;
-  letter-spacing: -3px;
-  line-height: 0;
-  font-weight: 700;
-  text-shadow: none;
-  color: $jobh1;
-}
-#jobsearch a:link {
-  color: $joba;
-}
-#jobsearch a:visited {
-  color: desaturate($joba, 50);
-}
-#jobsearch a:hover {
-  color: saturate($joba, 50);
-}
+@include slide(#jobsearch, $jobbg, $jobtext, $joblink);
 
 
 /* Contact */
@@ -356,7 +286,6 @@ $joba: #EFECCA;
   #jackalope{
     background-size:250%;
     background-position-x: 500px;
-    color:#ffffff;
   }
 
   #intro h1,
