--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,30 +36,18 @@ body {
 img {
   max-width: 100%;
 }
-a:link {
+.fa:link, a:link, .fa:visited, a:visited {
   color: #f68f67;
   text-decoration: none;
 }
-a:hover {
+.fa:hover, a:hover {
   color: #bde2df;
-  text-decoration: none;
-}
-a:visited {
-  color: #f68f67;
   text-decoration: none;
 }
 
 ul {
   list-style-type: none;
   padding: 0px;
-}
-
-.round img {
-  -webkit-border-radius: 15%;
-  -moz-border-radius: 15%;
-  -ms-border-radius: 15%;
-  -o-border-radius: 15%;
-  border-radius: 15%;
 }
 
 .btn, input[type=submit] {
@@ -83,6 +71,11 @@ ul {
 .btn:active, .btn.active, input[type=submit]:active, input[type=submit].active {
   transform: translate(4px, 4px);
   box-shadow: 1px 0px #3a587f, 0px 1px #4171ae, 2px 1px #3a587f, 1px 2px #4171ae;
+}
+
+//Font Awesome spacing problems
+.fa {
+  margin:5px;
 }
 
 #bradly {
