--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,19 @@
   }
 }
 
+@mixin word-wrap() {
+  @media screen and (min-width: 641px) {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+}
+
 /* Global */
 
 body {
@@ -101,11 +114,7 @@ ul {
   height:auto;
   position: relative;
   padding:140px 0;
-  word-wrap: break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
+  @include word-wrap();
 }
 
 /* Intro slide */
